@startuml

title __QUIZSINGLE's Class Diagram__\n

  namespace QuizModule {
    namespace QuizSingle {
      class QuizModule.QuizSingle.QuestionSingle {
          - answer : String
          - answered : Boolean
          - id : long
          - question : String
          + QuestionSingle()
          + getAnswer()
          + getAnswered()
          + getId()
          + getQuestion()
          + setAnswer()
          + setAnswered()
          + setId()
          + setQuestion()
      }
    }
  }
  

  namespace QuizModule {
    namespace QuizSingle {
      class QuizModule.QuizSingle.QuizSingle {
          - channel : TextChannel
          - eb : EmbedBuilder
          - hintCounter : int
          - hints : String[]
          - isRunning : boolean
          - thread : Thread
          + QuizSingle()
          + QuizSingle()
          + checkAnswer()
          + isAlive()
          + run()
          + setDatabaseConnection()
          + setTextChannel()
          + skip()
          + start()
          + stop()
          - generateHints()
          - getHint()
          - postMessage()
      }
    }
  }
  

  namespace QuizModule {
    namespace QuizSingle {
      class QuizModule.QuizSingle.QuizSingleParser {
          - client : HttpClient
          - url : String
          + QuizSingleParser()
          + getQuestion()
          - createQuestion()
          - fixFormat()
          - parse()
      }
    }
  }
  

  QuizModule.QuizSingle.QuizSingle .up.|> java.lang.Runnable
  QuizModule.QuizSingle.QuizSingle o-- QuizModule.QuizSQLConnector : dbConnection
  QuizModule.QuizSingle.QuizSingle o-- QuizModule.QuizSingle.QuizSingleParser : parser
  QuizModule.QuizSingle.QuizSingle o-- QuizModule.QuizSingle.QuestionSingle : question


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
